--- a/src/index.html
+++ b/src/index.html
@@ -12,15 +12,39 @@
 
   <header class="header">
     <div class="container">
-      <nav>
-        <a href="#">
-          <img src="img/logo.svg" alt="Логотип Prostobox.com">
+      <nav class="main-nav">
+        <a class="logo main-nav__logo" href="#">
+          <img src="img/logo.svg" alt="Логотип Prostobox.com" width="205" height="30">
         </a>
+        <button class="main-nav__toggle nav-toggle">
+          <span class="nav-toggle__line"></span>
+          <span class="visually-hidden">Меню</span>
+        </button>
+        <ul class="main-nav__list">
+          <li class="main-nav__item"><a href="#">Как покупать в США</a></li>
+          <li class="main-nav__item"><a href="#">Калькулятор</a></li>
+          <li class="main-nav__item"><a href="#">Скидки в США</a></li>
+          <li class="main-nav__item"><a href="#">ЛикБез</a></li>
+          <li class="main-nav__item"><a href="#">Блог</a></li>
+        </ul>
+        <div class="main-nav__user user-nav">
+          <a class="user-nav__login" href="#">Вход
+            <svg class="user-nav__login-icon" width="31" height="30">
+              <use href="img/sprite.svg#login"></use>
+            </svg>
+          </a>
+        </div>
       </nav>
-
     </div>
-
   </header>
+
+  <main>
+    <section class="main-banner">
+
+    </section>
+
+
+  </main>
 
   <footer class="footer">
 
