Добавляет main-banner

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- <link rel="preconnect" href="https://fonts.gstatic.com"> -->
+  <link href="https://fonts.googleapis.com/css2?family=Jost:wght@700&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="css/style.css">
 
   <title>Prostobox.com</title>
@@ -40,6 +43,74 @@
 
   <main>
     <section class="main-banner">
+      <div class="section-xxl">
+        <div class="main-banner__wrapper">
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-6">
+                <div class="main-banner__text">
+                  <b class="main-banner__lead heading-primary">Дешевая доставка из США от <span class="blue blue--white-bg">$3.99</span> от&nbsp;100 гр</b>
+                  <p class="main-banner__desc">Для продвинутых шопоголиков, ценящих время&nbsp;и&nbsp;разумную экономию</p>
+                  <a class="button main-banner__cta" href="#">Зарегистрироваться</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="container">
+          <ul class="main-banner__features row">
+            <li class="col-xl-3 col-6">
+              <div class="main-banner__feature-item">
+                <b class="main-banner__feature-title heading-tertiary">Адрес в Делавэре</b>
+                <span class="main-banner__feature-price">Бесплатно</span>
+              </div>
+            </li>
+            <li class="col-xl-3 col-6">
+              <div class="main-banner__feature-item">
+                <b class="main-banner__feature-title heading-tertiary">Приёмка на складе</b>
+                <span class="main-banner__feature-price">Бесплатно</span>
+              </div>
+            </li>
+            <li class="col-xl-3 col-6">
+              <div class="main-banner__feature-item">
+                <b class="main-banner__feature-title heading-tertiary">Объединение посылок</b>
+                <span class="main-banner__feature-price">Бесплатно</span>
+              </div>
+            </li>
+            <li class="col-xl-3 col-6">
+              <div class="main-banner__feature-item">
+                <b class="main-banner__feature-title heading-tertiary">Пополнение счёта от $10</b>
+                <span class="main-banner__feature-price">Без комиссии</span>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section class="advantages">
+      <div class="container">
+        <div class="advantages__wrapper row">
+          <div class="col-lg-6 ms-lg-auto">
+            <ul class="advantages__list">
+              <li class="advantages__item advantages__item--active">
+                <p class="advantages__text heading-secondary"><span class="blue">Доставляем</span> даже самые <span class="blue">маленькие посылки</span> без&nbsp;переплаты за вес и&nbsp;округлений до&nbsp;полукилограмма.</p>
+              </li>
+              <li class="advantages__item">
+                <p class="advantages__text heading-secondary">Отправляем <span class="blue">крупногабаритные консолидированные посылки</span> за разумные деньги.</p>
+              </li>
+              <li class="advantages__item">
+                <p class="advantages__text heading-secondary"><span class="blue">Принимаем оплату таможенной пошлины</span>, чтобы не тратить ваше время и не держать посылку на границе лишние дни.</p>
+              </li>
+              <li class="advantages__item">
+                <p class="advantages__text heading-secondary">Можем отправить вашу посылку <span class="blue">без ИНН, скана паспорта и подробных деклараций</span> через Почту России.</p>
+              </li>
+            </ul>
+            <a class="button" href="#">Получить адрес</a>
+          </div>
+
+        </div>
+      </div>
 
     </section>
 
