--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <div class="main-banner__text">
-                  <b class="main-banner__lead heading-primary">Дешевая доставка из США от <span class="blue blue--white-bg">$3.99</span> от&nbsp;100 гр</b>
+                  <b class="main-banner__lead heading-primary">Дешевая доставка из США от&nbsp;<span class="blue blue--white-bg">$3.99</span> от&nbsp;100 гр</b>
                   <p class="main-banner__desc">Для продвинутых шопоголиков, ценящих время&nbsp;и&nbsp;разумную экономию</p>
                   <a class="button main-banner__cta" href="#">Зарегистрироваться</a>
                 </div>
@@ -57,34 +57,34 @@
             </div>
           </div>
         </div>
-        <div class="container">
-          <ul class="main-banner__features row">
-            <li class="col-xl-3 col-6">
-              <div class="main-banner__feature-item">
-                <b class="main-banner__feature-title heading-tertiary">Адрес в Делавэре</b>
-                <span class="main-banner__feature-price">Бесплатно</span>
-              </div>
-            </li>
-            <li class="col-xl-3 col-6">
-              <div class="main-banner__feature-item">
-                <b class="main-banner__feature-title heading-tertiary">Приёмка на складе</b>
-                <span class="main-banner__feature-price">Бесплатно</span>
-              </div>
-            </li>
-            <li class="col-xl-3 col-6">
-              <div class="main-banner__feature-item">
-                <b class="main-banner__feature-title heading-tertiary">Объединение посылок</b>
-                <span class="main-banner__feature-price">Бесплатно</span>
-              </div>
-            </li>
-            <li class="col-xl-3 col-6">
-              <div class="main-banner__feature-item">
-                <b class="main-banner__feature-title heading-tertiary">Пополнение счёта от $10</b>
-                <span class="main-banner__feature-price">Без комиссии</span>
-              </div>
-            </li>
-          </ul>
-        </div>
+      </div>
+      <div class="container">
+        <ul class="main-banner__features row">
+          <li class="main-banner__feature col-xl-3 col-6">
+            <div class="main-banner__feature-item">
+              <b class="main-banner__feature-title heading-tertiary">Адрес в&nbsp;Делавэре</b>
+              <span class="main-banner__feature-price">Бесплатно</span>
+            </div>
+          </li>
+          <li class="main-banner__feature col-xl-3 col-6">
+            <div class="main-banner__feature-item">
+              <b class="main-banner__feature-title heading-tertiary">Приёмка на&nbsp;складе</b>
+              <span class="main-banner__feature-price">Бесплатно</span>
+            </div>
+          </li>
+          <li class="main-banner__feature col-xl-3 col-6">
+            <div class="main-banner__feature-item">
+              <b class="main-banner__feature-title heading-tertiary">Объединение посылок</b>
+              <span class="main-banner__feature-price">Бесплатно</span>
+            </div>
+          </li>
+          <li class="main-banner__feature col-xl-3 col-6">
+            <div class="main-banner__feature-item">
+              <b class="main-banner__feature-title heading-tertiary">Пополнение счёта от&nbsp;$10</b>
+              <span class="main-banner__feature-price">Без комиссии</span>
+            </div>
+          </li>
+        </ul>
       </div>
     </section>
 
