--- a/src/index.html
+++ b/src/index.html
@@ -226,10 +226,12 @@
             </a>
           </li>
           <li class="social__item">
-            <svg class="social__icon-instagram" width="30" height="30" viewBox="0 0 30 30">
-              <use xlink:href="img/sprite.svg#instagram"></use>
-            </svg>
-            <span class="visually-hidden">инстограм</span>
+            <a href="#">
+              <svg class="social__icon-instagram" width="30" height="30" viewBox="0 0 30 30">
+                <use xlink:href="img/sprite.svg#instagram"></use>
+              </svg>
+              <span class="visually-hidden">инстограм</span>
+            </a>
           </li>
           <li class="social__item">
             <a href="#">
@@ -240,16 +242,20 @@
             </a>
           </li>
           <li class="social__item">
-            <svg class="social__icon-facebook" width="30" height="30" viewBox="0 0 30 30">
-              <use xlink:href="img/sprite.svg#facebook"></use>
-            </svg>
-            <span class="visually-hidden">фейсбук</span>
+            <a href="#">
+              <svg class="social__icon-facebook" width="30" height="30" viewBox="0 0 30 30">
+                <use xlink:href="img/sprite.svg#facebook"></use>
+              </svg>
+              <span class="visually-hidden">фейсбук</span>
+            </a>
           </li>
           <li class="social__item">
-            <svg class="social__icon-tviter" width="30" height="30" viewBox="0 0 30 30">
-              <use xlink:href="img/sprite.svg#tviter"></use>
-            </svg>
-            <span class="visually-hidden">твитер</span>
+            <a href="#">
+              <svg class="social__icon-tviter" width="30" height="30" viewBox="0 0 30 30">
+                <use xlink:href="img/sprite.svg#tviter"></use>
+              </svg>
+              <span class="visually-hidden">твитер</span>
+            </a>
           </li>
         </ul>
       </div>
