--- a/src/index.html
+++ b/src/index.html
@@ -180,6 +180,21 @@
       </div>
     </section>
 
+    <section class="subscribe">
+      <div class="container">
+        <div class="subscribe__wrapper row">
+          <div class="col-lg-6 ms-lg-auto">
+            <p class="subscribe__text heading-secondary">
+              <span class="blue">Подпишитесь</span> на новостную рассылку Простобокса <br> и получайте информацию <br> о новинках и акциях <br class="transfer"> в числе первых.
+            </p>
+            <form class="subscribe__form form" method="post" action="#">
+                <input class="form__input form__input--mobile" type="text" placeholder="Ваш e-mail">
+                <button class="subscribe-button button">Подписаться</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
 
   </main>
 
