--- a/src/index.html
+++ b/src/index.html
@@ -116,9 +116,9 @@
 
     <section class="calculator">
       <div class="container">
-        <h2 class="heading-primary">Калькулятор</h2>
-        <div class="row">
-          <div class="col-lg-6 d-flex flex-wrap">
+        <h2 class="calculator__heading heading-primary">Калькулятор</h2>
+        <div class="row calculator__wrapper">
+          <div class="col-xl-6 d-flex flex-wrap">
             <form class="calculator__form form" action="#">
               <div class="calculator__field">
                 <label class="form__label">Страна доставки*</label>
@@ -136,13 +136,17 @@
                   <input class="form__input" id="zip" type="text">
               </div>
 
-              <div class="calculator__field">
-                <label class="form__label">Вес посылки*</label>
-                <input class="form__input" id="package-weight" class="weight-input centered" type="text" value="0.5">
-                <select>
+              <div class="calculator__field calculator__field--weight">
+                <label class="form__label" for="package-weight">Вес посылки*</label>
+                <div class="calculator__weight">
+                  <input class="form__input" id="package-weight" class="weight-input centered" type="text" value="0.5">
+                </div>
+                <div class="calculator__unit">
+                  <select class="form__input">
                     <option value="kg">кг</option>
                     <option value="lb">фунты</option>
-                </select>
+                  </select>
+                </div>
               </div>
 
               <div class="calculator__field">
@@ -151,22 +155,23 @@
               </div>
 
               <div class="calculator__field calculator__field--submit">
-                <button class="button">Рассчитать доставку</button>
+                <button class="calculator__submit button">Рассчитать доставку</button>
               </div>
 
             </form>
 
           </div>
+          <div class="col-xl-6">
+            <div class="calculator__features-wrapper">
+              <ul class="calculator__features">
+                <li>Приём посылок - <b class="blue">$0</b></li>
+                <li>Консолидация - <b class="blue">$0</b></li>
+                <li>Упаковка стандартная - <b class="blue">$0</b></li>
+                <li>Комиссия за пополнение баланса - <b class="blue">$0</b></li>
+              </ul>
+            </div>
 
-          <div class="col-lg-6">
-            <ul>
-              <li>Приём посылок - $0</li>
-              <li>Консолидация - $0</li>
-              <li>Упаковка стандартная - $0</li>
-              <li>Комиссия за пополнение баланса - $0</li>
-            </ul>
           </div>
-
         </div>
 
         <h3>Подходящие тарифы:</h3>
