--- a/src/index.html
+++ b/src/index.html
@@ -174,7 +174,80 @@
           </div>
         </div>
 
-        <h3>Подходящие тарифы:</h3>
+        <div class="calculator__tariffs tariffs">
+
+          <h3 class="tariffs__heading">Подходящие тарифы:</h3>
+
+          <ul class="tariffs__list">
+            <li class="tariffs__item tariff tariff--econom tariff--active">
+              <div class="tariff__wrapper">
+                <span class="tariff__label">Тариф</span>
+                <h3 class="tariff__title">Для экономных</h3>
+                <span class="tariff__time">5 - 10 дней</span>
+                <b class="tariff__price">$3,99</b>
+                <ul class="tariff__features">
+                  <li class="tariff__features-item">
+                    <span class="tariff__features-title">Страховка от утери</span>
+                    <b class="tariff__features-price">...</b>
+                  </li>
+                </ul>
+              </div>
+
+            </li>
+            <li class="tariffs__item tariff">
+              <span class="tariff__label">Тариф</span>
+              <h3 class="tariff__title">По одной</h3>
+              <span class="tariff__time">7 - 14 дней</span>
+              <b class="tariff__price">$9,99</b>
+              <ul class="tariff__features">
+                <li class="tariff__features-item">
+                  <span class="tariff__features-title">Страховка от утери</span>
+                  <b class="tariff__features-price">$5</b>
+                </li>
+              </ul>
+            </li>
+            <li class="tariffs__item tariff">
+              <span class="tariff__label">Тариф</span>
+              <h3 class="tariff__title">С объединением</h3>
+              <span class="tariff__time">7 - 14 дней</span>
+              <b class="tariff__price">$14,99</b>
+              <ul class="tariff__features">
+                <li class="tariff__features-item">
+                  <span class="tariff__features-title">Страховка от утери</span>
+                  <b class="tariff__features-price">$5</b>
+                </li>
+                <li class="tariff__features-item">
+                  <span class="tariff__features-title">Таможенная пошлина</span>
+                  <b class="tariff__features-price">$5</b>
+                </li>
+              </ul>
+            </li>
+            <li class="tariffs__item tariff">
+              <span class="tariff__label">Тариф</span>
+              <h3 class="tariff__title">Через почту</h3>
+              <span class="tariff__time">20 - 30 дней</span>
+              <b class="tariff__price">$22,99</b>
+              <ul class="tariff__features">
+                <li class="tariff__features-item">
+                  <span class="tariff__features-title">Страховка от утери</span>
+                  <b class="tariff__features-price">$5</b>
+                </li>
+              </ul>
+            </li>
+            <li class="tariffs__item tariff">
+              <span class="tariff__label">Тариф</span>
+              <h3 class="tariff__title">Для бандеролек</h3>
+              <span class="tariff__time">20 - 30 дней</span>
+              <b class="tariff__price">$15,99</b>
+              <ul class="tariff__features">
+                <li class="tariff__features-item">
+                  <span class="tariff__features-title">Страховка от утери</span>
+                  <b class="tariff__features-price">$5</b>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
       </div>
 
     </section>
