--- a/src/index.html
+++ b/src/index.html
@@ -194,7 +194,7 @@
               </div>
 
             </li>
-            <li class="tariffs__item tariff">
+            <li class="tariffs__item tariff tariff--one">
               <span class="tariff__label">Тариф</span>
               <h3 class="tariff__title">По одной</h3>
               <span class="tariff__time">7 - 14 дней</span>
@@ -206,7 +206,7 @@
                 </li>
               </ul>
             </li>
-            <li class="tariffs__item tariff">
+            <li class="tariffs__item tariff tariff--combination">
               <span class="tariff__label">Тариф</span>
               <h3 class="tariff__title">С объединением</h3>
               <span class="tariff__time">7 - 14 дней</span>
@@ -222,7 +222,7 @@
                 </li>
               </ul>
             </li>
-            <li class="tariffs__item tariff">
+            <li class="tariffs__item tariff tariff--post">
               <span class="tariff__label">Тариф</span>
               <h3 class="tariff__title">Через почту</h3>
               <span class="tariff__time">20 - 30 дней</span>
@@ -234,7 +234,7 @@
                 </li>
               </ul>
             </li>
-            <li class="tariffs__item tariff">
+            <li class="tariffs__item tariff tariff--parcel">
               <span class="tariff__label">Тариф</span>
               <h3 class="tariff__title">Для бандеролек</h3>
               <span class="tariff__time">20 - 30 дней</span>
@@ -261,7 +261,7 @@
     <section class="recommendation">
       <div class="container">
         <div class="recommendation__content">
-          <h2 class="recommendation__heading heading-primary">Подскажем где<br> и что покупать</h2>
+          <h2 class="recommendation__heading heading-primary">Подскажем где и что покупать</h2>
           <p class="recommendation__text heading-tertiary">50 Американских <span class="blue">распродаж</span></p>
           <a class="button" href="#">К распродажам</a>
         </div>
