--- a/src/index.html
+++ b/src/index.html
@@ -185,10 +185,36 @@
       </div>
     </section>
 
+    <section class="service">
+      <div class="container">
+        <div class="service__wapper row">
+          <h2 class="service__heading heading-primary">Посмотрите как мы работаем</h2>
+          <p class="service__text heading-secondary">Доставим между континентами <span class="blue">проще</span> и <span class="blue">быстрее</span>, чем внутри страны.</p>
+          <div class="col-lg-6 ms-lg-auto">
+            <ul class="servica__list">
+              <li class="service__item">
+                Наш современный склад находится <span class="blue">далеко от соседей</span>. Ваша посылка попадет только к нам.
+              </li>
+              <li class="service__item">
+                Принимаем посылки за <span class="blue">3 секунды</span>. Весь процесс автоматизирован и продуман до мелочей
+              </li>
+              <li class="service__item">
+                Отправка посылок происходит <span class="blue">2 раза в неделю</span>. Ваша посылка <span class="blue">не задержится на складе</span> долго.
+              </li>
+              <li class="service__item">
+                Самолеты в Россию <span class="blue">летают регулярно</span>. Среднее время доставки посылок от 5 до 10 дней в ПВЗ или Постамат
+              </li>
+            </ul>
+            <a class="service__button button" href="#">3D тур по складу</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="recommendation">
       <div class="container">
         <div class="recommendation__content">
-          <h2 class="recommendation__heading heading-primary">Подскажем где<br> и что покупать</h2>
+          <h2 class="recommendation__heading heading-primary">Подскажем где и что покупать</h2>
           <p class="recommendation__text heading-tertiary">50 Американских <span class="blue">распродаж</span></p>
           <a class="button" href="#">К распродажам</a>
         </div>
