--- a/src/index.html
+++ b/src/index.html
@@ -185,6 +185,16 @@
       </div>
     </section>
 
+    <section class="additional">
+      <div class="additional__wrapper section-xxl">
+        <div class="container">
+          <div class="additional__">
+
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="service">
       <div class="container">
         <div class="service__wapper row">
