--- a/src/index.html
+++ b/src/index.html
@@ -178,73 +178,84 @@
 
           <h3 class="tariffs__heading">Подходящие тарифы:</h3>
 
-          <ul class="tariffs__list">
-            <li class="tariffs__item tariff tariff--econom tariff--active">
-              <div class="tariff__wrapper">
+          <div class="tariffs__wrapper">
+            <ul class="tariffs__list">
+              <li class="tariffs__item tariff tariff--econom tariff--active">
+                <div class="tariff__wrapper">
+                  <span class="tariff__label">Тариф</span>
+                  <h3 class="tariff__title">Для экономных</h3>
+                  <span class="tariff__time">5 - 10 дней</span>
+                  <b class="tariff__price">$3,99</b>
+                  <ul class="tariff__features">
+                    <li class="tariff__features-item">
+                      <span class="tariff__features-title">Страховка от утери</span>
+                      <b class="tariff__features-price">...</b>
+                    </li>
+                  </ul>
+                </div>
+              </li>
+              <li class="tariffs__item tariff tariff--one">
                 <span class="tariff__label">Тариф</span>
-                <h3 class="tariff__title">Для экономных</h3>
-                <span class="tariff__time">5 - 10 дней</span>
-                <b class="tariff__price">$3,99</b>
+                <h3 class="tariff__title">По одной</h3>
+                <span class="tariff__time">7 - 14 дней</span>
+                <b class="tariff__price">$9,99</b>
                 <ul class="tariff__features">
                   <li class="tariff__features-item">
                     <span class="tariff__features-title">Страховка от утери</span>
-                    <b class="tariff__features-price">...</b>
+                    <b class="tariff__features-price">$5</b>
                   </li>
                 </ul>
-              </div>
+              </li>
+              <li class="tariffs__item tariff tariff--combination">
+                <span class="tariff__label">Тариф</span>
+                <h3 class="tariff__title">С объединением</h3>
+                <span class="tariff__time">7 - 14 дней</span>
+                <b class="tariff__price">$14,99</b>
+                <ul class="tariff__features">
+                  <li class="tariff__features-item">
+                    <span class="tariff__features-title">Страховка от утери</span>
+                    <b class="tariff__features-price">$5</b>
+                  </li>
+                  <li class="tariff__features-item">
+                    <span class="tariff__features-title">Таможенная пошлина</span>
+                    <b class="tariff__features-price">$5</b>
+                  </li>
+                </ul>
+              </li>
+              <li class="tariffs__item tariff tariff--post">
+                <span class="tariff__label">Тариф</span>
+                <h3 class="tariff__title">Через почту</h3>
+                <span class="tariff__time">20 - 30 дней</span>
+                <b class="tariff__price">$22,99</b>
+                <ul class="tariff__features">
+                  <li class="tariff__features-item">
+                    <span class="tariff__features-title">Страховка от утери</span>
+                    <b class="tariff__features-price">$5</b>
+                  </li>
+                </ul>
+              </li>
+              <li class="tariffs__item tariff tariff--parcel">
+                <span class="tariff__label">Тариф</span>
+                <h3 class="tariff__title">Для бандеролек</h3>
+                <span class="tariff__time">20 - 30 дней</span>
+                <b class="tariff__price">$15,99</b>
+                <ul class="tariff__features">
+                  <li class="tariff__features-item">
+                    <span class="tariff__features-title">Страховка от утери</span>
+                    <b class="tariff__features-price">$5</b>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </div>
 
+
+          <ul class="slider-nav promo-slider__nav">
+            <li class="slider-nav__item">
+              <button class="slider-nav__btn slider-nav__btn--prev"></button>
             </li>
-            <li class="tariffs__item tariff tariff--one">
-              <span class="tariff__label">Тариф</span>
-              <h3 class="tariff__title">По одной</h3>
-              <span class="tariff__time">7 - 14 дней</span>
-              <b class="tariff__price">$9,99</b>
-              <ul class="tariff__features">
-                <li class="tariff__features-item">
-                  <span class="tariff__features-title">Страховка от утери</span>
-                  <b class="tariff__features-price">$5</b>
-                </li>
-              </ul>
-            </li>
-            <li class="tariffs__item tariff tariff--combination">
-              <span class="tariff__label">Тариф</span>
-              <h3 class="tariff__title">С объединением</h3>
-              <span class="tariff__time">7 - 14 дней</span>
-              <b class="tariff__price">$14,99</b>
-              <ul class="tariff__features">
-                <li class="tariff__features-item">
-                  <span class="tariff__features-title">Страховка от утери</span>
-                  <b class="tariff__features-price">$5</b>
-                </li>
-                <li class="tariff__features-item">
-                  <span class="tariff__features-title">Таможенная пошлина</span>
-                  <b class="tariff__features-price">$5</b>
-                </li>
-              </ul>
-            </li>
-            <li class="tariffs__item tariff tariff--post">
-              <span class="tariff__label">Тариф</span>
-              <h3 class="tariff__title">Через почту</h3>
-              <span class="tariff__time">20 - 30 дней</span>
-              <b class="tariff__price">$22,99</b>
-              <ul class="tariff__features">
-                <li class="tariff__features-item">
-                  <span class="tariff__features-title">Страховка от утери</span>
-                  <b class="tariff__features-price">$5</b>
-                </li>
-              </ul>
-            </li>
-            <li class="tariffs__item tariff tariff--parcel">
-              <span class="tariff__label">Тариф</span>
-              <h3 class="tariff__title">Для бандеролек</h3>
-              <span class="tariff__time">20 - 30 дней</span>
-              <b class="tariff__price">$15,99</b>
-              <ul class="tariff__features">
-                <li class="tariff__features-item">
-                  <span class="tariff__features-title">Страховка от утери</span>
-                  <b class="tariff__features-price">$5</b>
-                </li>
-              </ul>
+            <li class="slider-nav__item">
+              <button class="slider-nav__btn slider-nav__btn--next"></button>
             </li>
           </ul>
         </div>
@@ -252,9 +263,68 @@
 
     </section>
 
-    <section>
+    <section class="work-scheme">
       <div class="container">
         <h2 class="heading-primary">Простобокс – у нас все просто</h2>
+        <ul class="work-scheme__list row">
+          <li class="work-scheme__item col-xl-4">
+            <div class="work-scheme__wrapper">
+              <h3 class="work-scheme__title heading-tertiary">Заказываете</h3>
+              <p class="work-scheme__text">вещи в интернет-магазинах США, как будто вы там живете</p>
+            </div>
+            <div class="work-scheme__phase">
+              <span>1 - 2 дня</span>
+            </div>
+          </li>
+          <li class="work-scheme__item col-xl-4">
+            <div class="work-scheme__wrapper">
+              <h3 class="work-scheme__title heading-tertiary">Оформляете</h3>
+              <p class="work-scheme__text">и оплатить доставку посылки на&nbsp;ваш Российский адрес</p>
+            </div>
+            <div class="work-scheme__phase">
+              <span>5 - 10 дней</span>
+            </div>
+          </li>
+          <li class="work-scheme__item work-scheme__item--lines col-xl-4">
+            <div class="work-scheme__wrapper">
+              <h3 class="work-scheme__title heading-tertiary">Получаете</h3>
+              <p class="work-scheme__text">заказ через 5-10 дней после отправки со склада из США</p>
+            </div>
+            <a class="button" href="#">Зарегистрироваться</a>
+          </li>
+        </ul>
+
+      </div>
+    </section>
+
+    <section class="promo-slider">
+      <div class="container promo-slider__container">
+        <div class="promo-slider__wrapper">
+
+          <div class="promo-slider__item">
+            <div class="promo-slider__img">
+              <img src="img/slides/iphone.png" alt="iPhone">
+            </div>
+            <div class="promo-slider__text">
+              <h3 class="promo-slider__title">iPhone из США</h3>
+              <p class="promo-slider__desc">Как купить новый iPhone 12 из Америки с доставкой в&nbsp;Россию. Мы подготовили подробную инструкцию по покупке с официального сайта Apple, а также рассказали где еще можну купить яблочную продукцию.</p>
+            </div>
+          </div>
+
+        </div>
+
+        <ul class="slider-nav promo-slider__nav">
+          <li class="slider-nav__item">
+            <button class="slider-nav__btn slider-nav__btn--prev"></button>
+          </li>
+          <li class="slider-nav__item">
+            <button class="slider-nav__btn slider-nav__btn--next"></button>
+          </li>
+        </ul>
+        <div class="nav-dots">
+          <button class="nav-dots__btn nav-dots__btn--active"></button>
+          <button class="nav-dots__btn"></button>
+        </div>
       </div>
     </section>
 
