--- a/src/index.html
+++ b/src/index.html
@@ -272,7 +272,7 @@
               <h3 class="work-scheme__title heading-tertiary">Заказываете</h3>
               <p class="work-scheme__text">вещи в интернет-магазинах США, как будто вы там живете</p>
             </div>
-            <div class="work-scheme__phase">
+            <div class="work-scheme__phase work-scheme__phase--1">
               <span>1 - 2 дня</span>
             </div>
           </li>
@@ -281,7 +281,7 @@
               <h3 class="work-scheme__title heading-tertiary">Оформляете</h3>
               <p class="work-scheme__text">и оплатить доставку посылки на&nbsp;ваш Российский адрес</p>
             </div>
-            <div class="work-scheme__phase">
+            <div class="work-scheme__phase work-scheme__phase--2">
               <span>5 - 10 дней</span>
             </div>
           </li>
@@ -326,6 +326,27 @@
           <button class="nav-dots__btn"></button>
         </div>
       </div>
+    </section>
+
+    <section class="features">
+      <div class="container">
+        <h2 class="features__heading heading-primary">Самое важное о Простобоксе</h2>
+        <p class="features__heading-2 heading-secondary"><span class="blue">Двойная выгода</span> – платите меньше<br> не только за товары, но и за доставку</p>
+        <ul class="features__list">
+          <li class="features__item">Склад в <span class="blue">100% безналоговом</span> Делавэре</li>
+          <li class="features__item"><span class="blue">Бесплатный приём</span> входящих посылок на&nbsp;складе</li>
+          <li class="features__item"><span class="blue">Пополнение</span> счёта от&nbsp;$10 <span class="blue">без комиссии</span> эквайринга</li>
+          <li class="features__item"><span class="blue">Бесплатное объединение</span> входящих посылок</li>
+          <li class="features__item"><span class="blue">Бесплатная</span> стандартная <span class="blue">упаковка</span> посылок</li>
+          <li class="features__item"><span class="blue">Склад без соседей</span>: посылки точно привезут нам</li>
+          <li class="features__item"><span class="blue">24/7 работает служба&nbsp;поддержки</span> Простобокса</li>
+          <li class="features__item"><span class="blue">45 дней</span> входящие посылки <span class="blue">хранятся бесплатно</span></li>
+          <li class="features__item"><span class="blue">Выплачиваем $2</span> за каждую посылку, отправленную по реферальной программе</li>
+        </ul>
+
+        <a class="button" href="#">Зарегистрироваться</a>
+      </div>
+
     </section>
 
     <section class="service">
