--- a/src/index.html
+++ b/src/index.html
@@ -188,11 +188,11 @@
     <section class="additional">
       <div class="additional__wrapper section-xxl">
         <div class="additional__content container">
-          <h2 class="additional__heading heading-primary">Что еще надо знать о Простобокс</h2>
+          <h2 class="additional__heading heading-primary">Что еще надо знать о&nbsp;Простобокс</h2>
           <ul class="additional__list">
             <li class="additional__item additional__item--cap">
               <p class="additional__tertiary heading-tertiary">Удобно</p>
-              <p class="additional__text">доставляем до постаматов или ПВЗ рядом с вашим домом</p>
+              <p class="additional__text">доставляем до постаматов или&nbsp;ПВЗ&nbsp;рядом&nbsp;с&nbsp;вашим домом</p>
             </li>
             <li class="additional__item additional__item--shild">
               <p class="additional__tertiary heading-tertiary">Надежно</p>
@@ -200,12 +200,12 @@
             </li>
             <li class="additional__item additional__item--rocket">
               <p class="additional__tertiary heading-tertiary">Быстро</p>
-              <p class="additional__text">собираем и отправляем посылки за минимальную стоимость, благодаря автоматизированному процессу.</p>
-              <p class="additional__text-special">Доставка от 5 дней до Москвы и 10 дней в регионы</p>
+              <p class="additional__text">собираем и отправляем посылки за&nbsp;минимальную стоимость, благодаря автоматизированному процессу.</p>
+              <p class="additional__text-special">Доставка от 5 дней до Москвы и 10 дней в&nbsp;регионы</p>
             </li>
             <li class="additional__item additional__item--message">
               <p class="additional__tertiary heading-tertiary">Френдли сервис</p>
-              <p class="additional__text">Наша служба поддержки 24/7 - наедине с проблемой никого не оставит. А Telegram - бот  покажет уведомления о посылках и других событиях</p>
+              <p class="additional__text">Наша служба поддержки 24/7 - наедине с&nbsp;проблемой никого не оставит. А Telegram - бот  покажет уведомления о посылках и&nbsp;других событиях</p>
             </li>
           </ul>
           <div class="service__button-wrapper">
