Добавляет мобильное меню

--- a/src/index.html
+++ b/src/index.html
@@ -23,20 +23,26 @@
           <span class="nav-toggle__line"></span>
           <span class="visually-hidden">Меню</span>
         </button>
-        <ul class="main-nav__list">
-          <li class="main-nav__item"><a href="#">Как покупать в США</a></li>
-          <li class="main-nav__item"><a href="#">Калькулятор</a></li>
-          <li class="main-nav__item"><a href="#">Скидки в США</a></li>
-          <li class="main-nav__item"><a href="#">ЛикБез</a></li>
-          <li class="main-nav__item"><a href="#">Блог</a></li>
-        </ul>
-        <div class="main-nav__user user-nav">
-          <a class="user-nav__login" href="#">Вход
-            <svg class="user-nav__login-icon" width="31" height="30">
-              <use href="img/sprite.svg#login"></use>
-            </svg>
-          </a>
+        <div class="main-nav__mobile-wrapper">
+          <ul class="main-nav__list">
+            <li class="main-nav__item"><a href="#">Как покупать в США</a></li>
+            <li class="main-nav__item"><a href="#">Калькулятор</a></li>
+            <li class="main-nav__item"><a href="#">Скидки в США</a></li>
+            <li class="main-nav__item"><a href="#">ЛикБез</a></li>
+            <li class="main-nav__item"><a href="#">Блог</a></li>
+          </ul>
+          <div class="main-nav__user user-nav">
+            <a class="user-nav__login" href="#">Вход
+              <svg class="user-nav__login-icon" width="31" height="30">
+                <use href="img/sprite.svg#login"></use>
+              </svg>
+              <svg class="user-nav__login-icon-mobile" width="20" height="20">
+                <use href="img/sprite.svg#login-mobile"></use>
+              </svg>
+            </a>
+          </div>
         </div>
+
       </nav>
     </div>
   </header>
