--- a/src/index.html
+++ b/src/index.html
@@ -24,13 +24,64 @@
           <span class="visually-hidden">Меню</span>
         </button>
         <div class="main-nav__mobile-wrapper">
-          <ul class="main-nav__list">
-            <li class="main-nav__item"><a href="#">Как покупать в США</a></li>
-            <li class="main-nav__item"><a href="#">Калькулятор</a></li>
-            <li class="main-nav__item"><a href="#">Скидки в США</a></li>
-            <li class="main-nav__item"><a href="#">ЛикБез</a></li>
-            <li class="main-nav__item"><a href="#">Блог</a></li>
-          </ul>
+          <div class="main-nav__wrapper">
+            <ul class="main-nav__list">
+              <li class="main-nav__item"><a href="#">Как покупать в США</a></li>
+              <li class="main-nav__item"><a href="#">Калькулятор</a></li>
+              <li class="main-nav__item"><a href="#">Скидки в США</a></li>
+              <li class="main-nav__item"><a href="#">ЛикБез</a></li>
+              <li class="main-nav__item"><a href="#">Блог</a></li>
+            </ul>
+            <ul class="main-nav__list main-nav__list--mobile">
+              <li class="main-nav__item"><a href="#">Обработка персональных данных</a></li>
+              <li class="main-nav__item"><a href="#">Условия использования сервиса</a></li>
+            </ul>
+          </div>
+          <div class="main-nav__social">
+            <span class="main-nav__social-title">Мы в соцсетях:</span>
+            <ul class="main-nav__social-list social">
+              <li class="social__item">
+                <a href="#">
+                  <svg class="social__icon-vk" width="30" height="30" viewBox="0 0 22 22">
+                    <use xlink:href="img/sprite.svg#vk"></use>
+                  </svg>
+                  <span class="visually-hidden">вкантакте</span>
+                </a>
+              </li>
+              <li class="social__item">
+                <a href="#">
+                  <svg class="social__icon-instagram" width="30" height="30" viewBox="0 0 30 30">
+                    <use xlink:href="img/sprite.svg#instagram"></use>
+                  </svg>
+                  <span class="visually-hidden">инстограм</span>
+                </a>
+              </li>
+              <li class="social__item">
+                <a href="#">
+                  <svg class="social__icon-telegram" width="30" height="30" viewBox="0 0 30 30">
+                    <use xlink:href="img/sprite.svg#telegram"></use>
+                  </svg>
+                  <span class="visually-hidden">телеграм</span>
+                </a>
+              </li>
+              <li class="social__item">
+                <a href="#">
+                  <svg class="social__icon-facebook" width="30" height="30" viewBox="0 0 30 30">
+                    <use xlink:href="img/sprite.svg#facebook"></use>
+                  </svg>
+                  <span class="visually-hidden">фейсбук</span>
+                </a>
+              </li>
+              <li class="social__item">
+                <a href="#">
+                  <svg class="social__icon-tviter" width="30" height="30" viewBox="0 0 30 30">
+                    <use xlink:href="img/sprite.svg#tviter"></use>
+                  </svg>
+                  <span class="visually-hidden">твитер</span>
+                </a>
+              </li>
+            </ul>
+          </div>
           <div class="main-nav__user user-nav">
             <a class="user-nav__login" href="#">Вход
               <svg class="user-nav__login-icon" width="31" height="30">
@@ -55,7 +106,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <div class="main-banner__text">
-                  <b class="main-banner__lead heading-primary">Дешевая доставка из США от&nbsp;<span class="blue blue--white-bg">$3.99</span> от&nbsp;100 гр</b>
+                  <b class="main-banner__lead heading-primary">Дешевая доставка<br> из США от&nbsp;<span class="blue blue--white-bg">$3.99</span> от&nbsp;100 гр</b>
                   <p class="main-banner__desc">Для продвинутых шопоголиков, ценящих время&nbsp;и&nbsp;разумную экономию</p>
                   <a class="button main-banner__cta" href="#">Зарегистрироваться</a>
                 </div>
@@ -128,14 +179,14 @@
             <form class="calculator__form form" action="#">
               <div class="calculator__field">
                 <label class="form__label">Страна доставки*</label>
-                <select class="form__input" id="country" required="">
-                  <option value="" disabled selected>Выбрать страну</option>
+                <select class="form__select form__input" id="country" required autocomplete="off">
+                  <option value="" disabled selected>Страна</option>
                   <option value="RU">Россия</option>
                 </select>
               </div>
               <div class="calculator__field">
                   <label class="form__label">Город доставки*</label>
-                  <input class="form__input" type="text" id="city" value="">
+                  <input class="form__input" type="text" id="city" value="" placeholder="Город">
               </div>
               <div class="calculator__field">
                   <label class="form__label">Индекс</label>
