--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
 
   <!-- <link rel="preconnect" href="https://fonts.gstatic.com"> -->
   <link href="https://fonts.googleapis.com/css2?family=Jost:wght@700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+  <link rel="stylesheet" href="css/style.css">
 
   <title>Prostobox.com</title>
 </head>
@@ -40,7 +40,7 @@
           <div class="main-nav__social">
             <span class="main-nav__social-title">Мы в соцсетях:</span>
             <ul class="main-nav__social-list social">
-              <li class="social__item">
+              <li class="social__item social__item--white">
                 <a href="#">
                   <svg class="social__icon-vk" width="30" height="30" viewBox="0 0 22 22">
                     <use xlink:href="img/sprite.svg#vk"></use>
@@ -48,7 +48,7 @@
                   <span class="visually-hidden">вкантакте</span>
                 </a>
               </li>
-              <li class="social__item">
+              <li class="social__item social__item--white">
                 <a href="#">
                   <svg class="social__icon-instagram" width="30" height="30" viewBox="0 0 30 30">
                     <use xlink:href="img/sprite.svg#instagram"></use>
@@ -56,7 +56,7 @@
                   <span class="visually-hidden">инстограм</span>
                 </a>
               </li>
-              <li class="social__item">
+              <li class="social__item social__item--white">
                 <a href="#">
                   <svg class="social__icon-telegram" width="30" height="30" viewBox="0 0 30 30">
                     <use xlink:href="img/sprite.svg#telegram"></use>
@@ -64,7 +64,7 @@
                   <span class="visually-hidden">телеграм</span>
                 </a>
               </li>
-              <li class="social__item">
+              <li class="social__item social__item--white">
                 <a href="#">
                   <svg class="social__icon-facebook" width="30" height="30" viewBox="0 0 30 30">
                     <use xlink:href="img/sprite.svg#facebook"></use>
@@ -72,7 +72,7 @@
                   <span class="visually-hidden">фейсбук</span>
                 </a>
               </li>
-              <li class="social__item">
+              <li class="social__item social__item--white">
                 <a href="#">
                   <svg class="social__icon-tviter" width="30" height="30" viewBox="0 0 30 30">
                     <use xlink:href="img/sprite.svg#tviter"></use>
@@ -151,7 +151,7 @@
           <div class="col-lg-6 ms-lg-auto">
             <div class="advantages__container swiper-container swiper-advantages">
               <ul class="advantages__list swiper-wrapper">
-                <li class="advantages__item advantages__item--active swiper-slide">
+                <li class="advantages__item swiper-slide">
                   <p class="advantages__text heading-secondary"><span class="blue">Доставляем</span> даже самые <span class="blue">маленькие посылки</span> без&nbsp;переплаты за вес и&nbsp;округлений до&nbsp;полукилограмма.</p>
                 </li>
                 <li class="advantages__item swiper-slide">
@@ -238,9 +238,9 @@
 
           <h3 class="tariffs__heading">Подходящие тарифы:</h3>
 
-          <div class="tariffs__wrapper">
-            <ul class="tariffs__list">
-              <li class="tariffs__item tariff tariff--econom tariff--active">
+          <div class="tariffs__wrapper swiper-container swiper-tariffs">
+            <ul class="tariffs__list swiper-wrapper">
+              <li class="tariffs__item tariff tariff--active tariff--econom swiper-slide">
                 <div class="tariff__wrapper">
                   <span class="tariff__label">Тариф</span>
                   <h3 class="tariff__title">Для экономных</h3>
@@ -254,7 +254,7 @@
                   </ul>
                 </div>
               </li>
-              <li class="tariffs__item tariff tariff--one">
+              <li class="tariffs__item tariff tariff--one swiper-slide">
                 <span class="tariff__label">Тариф</span>
                 <h3 class="tariff__title">По одной</h3>
                 <span class="tariff__time">7 - 14 дней</span>
@@ -266,7 +266,43 @@
                   </li>
                 </ul>
               </li>
-              <li class="tariffs__item tariff tariff--combination">
+              <li class="tariffs__item tariff tariff--one swiper-slide">
+                <span class="tariff__label">Тариф</span>
+                <h3 class="tariff__title">По одной</h3>
+                <span class="tariff__time">7 - 14 дней</span>
+                <b class="tariff__price">$9,99</b>
+                <ul class="tariff__features">
+                  <li class="tariff__features-item">
+                    <span class="tariff__features-title">Страховка от утери</span>
+                    <b class="tariff__features-price">$5</b>
+                  </li>
+                </ul>
+              </li>
+              <li class="tariffs__item tariff tariff--one swiper-slide">
+                <span class="tariff__label">Тариф</span>
+                <h3 class="tariff__title">По одной</h3>
+                <span class="tariff__time">7 - 14 дней</span>
+                <b class="tariff__price">$9,99</b>
+                <ul class="tariff__features">
+                  <li class="tariff__features-item">
+                    <span class="tariff__features-title">Страховка от утери</span>
+                    <b class="tariff__features-price">$5</b>
+                  </li>
+                </ul>
+              </li>
+              <li class="tariffs__item tariff tariff--one swiper-slide">
+                <span class="tariff__label">Тариф</span>
+                <h3 class="tariff__title">По одной</h3>
+                <span class="tariff__time">7 - 14 дней</span>
+                <b class="tariff__price">$9,99</b>
+                <ul class="tariff__features">
+                  <li class="tariff__features-item">
+                    <span class="tariff__features-title">Страховка от утери</span>
+                    <b class="tariff__features-price">$5</b>
+                  </li>
+                </ul>
+              </li>
+              <li class="tariffs__item tariff tariff--combination swiper-slide">
                 <span class="tariff__label">Тариф</span>
                 <h3 class="tariff__title">С объединением</h3>
                 <span class="tariff__time">7 - 14 дней</span>
@@ -282,7 +318,7 @@
                   </li>
                 </ul>
               </li>
-              <li class="tariffs__item tariff tariff--post">
+              <li class="tariffs__item tariff tariff--post swiper-slide">
                 <span class="tariff__label">Тариф</span>
                 <h3 class="tariff__title">Через почту</h3>
                 <span class="tariff__time">20 - 30 дней</span>
@@ -294,7 +330,7 @@
                   </li>
                 </ul>
               </li>
-              <li class="tariffs__item tariff tariff--parcel">
+              <li class="tariffs__item tariff tariff--parcel swiper-slide">
                 <span class="tariff__label">Тариф</span>
                 <h3 class="tariff__title">Для бандеролек</h3>
                 <span class="tariff__time">20 - 30 дней</span>
@@ -624,10 +660,40 @@
 
   <script>
     var swiperAdvantages = new Swiper(".swiper-advantages", {
+      loop: true,
       autoplay: {
-          delay: 5000,
-          disableOnInteraction: false,
+        delay: 5000,
+        disableOnInteraction: false,
+      },
+    });
+
+    var swiperTariffs = new Swiper(".swiper-tariffs", {
+      roundLengths: true,
+      breakpoints: {
+        320: {
+          slidesPerView: 1.295,
+          spaceBetween: 20,
+          centeredSlides: true,
         },
+        768: {
+          slidesPerView: 2.4,
+          spaceBetween: 20,
+          centeredSlides: false,
+        },
+        992: {
+          slidesPerView: 3.42,
+          spaceBetween: 20
+        },
+        1240: {
+          slidesPerView: 4.42,
+          spaceBetween: 27,
+        }
+      },
+      navigation: {
+        disabledClass: "slider-nav__btn--disabled",
+        nextEl: ".tariffs .slider-nav__btn--next",
+        prevEl: ".tariffs .slider-nav__btn--prev",
+      },
     });
   </script>
 </body>
